syntax = "proto3";

package auth_v1;

option go_package = "auth/pkg/auth_v1;auth_v1";

service AuthV1 {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string name = 1;
    string email = 2;
    string phone = 3;
    string password = 4;
}

message RegisterResponse {
    uint32 status = 1;
    string message = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string name = 1;
    string token = 2;
    uint32 status = 3;
    string message = 4;
}